feat(WAFR-169): save assessment export region
